eliminazione *.pkl e *.csv  dal git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,13 @@ __pycache__/
 *.pyc
 
 submission_format.csv
-*.csv
+#*.csv
 *.ipynb_checkpoints
 *.ipynb
 *.pdf
 *.npy
 *.joblib
 submission_*.csv
-*.pkl
+#*.pkl
 
 catboost_info/
